force-app/main/default/objects/Resource_Link__c.object
<CustomObject>
    <description>External URLs related to specific Projects that are used and referenced by Project Members.</description>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Resource Links</relationshipLabel>
        <relationshipName>Resource_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AppExchange Listing</fullName>
                </value>
                <value>
                    <fullName>Confluence</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Figma</fullName>
                </value>
                <value>
                    <fullName>Github</fullName>
                </value>
                <value>
                    <fullName>Google Doc</fullName>
                </value>
                <value>
                    <fullName>Google Folder</fullName>
                </value>
                <value>
                    <fullName>Google Form</fullName>
                </value>
                <value>
                    <fullName>Google Jamboard</fullName>
                </value>
                <value>
                    <fullName>Google Sheet</fullName>
                </value>
                <value>
                    <fullName>Google Site</fullName>
                </value>
                <value>
                    <fullName>Google Slides</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Knowledge Article</fullName>
                </value>
                <value>
                    <fullName>LLM</fullName>
                </value>
                <value>
                    <fullName>LucidChart</fullName>
                </value>
                <value>
                    <fullName>MS Word</fullName>
                </value>
                <value>
                    <fullName>MS Excel</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Quip Doc</fullName>
                </value>
                <value>
                    <fullName>Salesforce Org</fullName>
                </value>
                <value>
                    <fullName>Salesforce Experience Cloud Site</fullName>
                </value>
                <value>
                    <fullName>Slack Canvas</fullName>
                </value>
                <value>
                    <fullName>Slack Channel</fullName>
                </value>
                <value>
                    <fullName>Slack List</fullName>
                </value>
                <value>
                    <fullName>Slack Post</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Tableau Dashboard</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                    <default>true</default>
                    <label>URL</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Resource Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>URL__c</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Resource Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>